# fcc-mean-var-std-calculator

./: README.md  main.py  pyproject.toml
src/: mean_var_std_calc.py
tests/: test_module.py
